Inserção de referência neale

--- a/Amostragem por Cotas.Rmd
+++ b/Amostragem por Cotas.Rmd
@@ -94,5 +94,7 @@ MALHOTRA, Naresh K.; MONTINGELLI JÚNIOR, Nivaldo; FARIAS, Alfredo Alves de.
 Pesquisa de marketing: uma orientação aplicada. 3. ed. Porto Alegre: Bookman, 2001. 
 719 p. ISBN 85-7307-728-X
 
+AHMED EL-DASH, N. Avaliação metodológica das pesquisas eleitorais brasileiras. pdf—Universidade de São Paulo: [s.n.].
+
 # Texto de participação
 
