--- a/Amostragem por Cotas.Rmd
+++ b/Amostragem por Cotas.Rmd
@@ -92,7 +92,7 @@ Kish, L. (1965) Survey Sampling. John Wiley and Sons Inc., New York.
 
 MALHOTRA, Naresh K.; MONTINGELLI JÚNIOR, Nivaldo; FARIAS, Alfredo Alves de. 
 Pesquisa de marketing: uma orientação aplicada. 3. ed. Porto Alegre: Bookman, 2001. 
-719 p. ISBN 85-7307-728-X
+719 p. ISBN 85-7307-728-X.
 
 AHMED EL-DASH, N. Avaliação metodológica das pesquisas eleitorais brasileiras. pdf—Universidade de São Paulo: [s.n.].
 
