--- a/Amostragem por Cotas.Rmd
+++ b/Amostragem por Cotas.Rmd
@@ -47,15 +47,17 @@ header-includes:
 
 # 1.Resumo
 
-
-O presente relátorio tem por intuito estudar e apresentar de forma sintetisada e didática um categria de amostragem bastante relevante, que é amostragem por cotas. Diante do exposto, apresentaremos uma visão geral
-deste tipo de amostragem abrangendo desde a parte de seu surgimento, conceitos fundamentais, exmplos e algumas aplicações até o enceramento deste relátorio com nossas considerações finais a respeito deste tipo de amostragem.
+O presente relatório tem por intuito estudar e apresentar, de forma sintetizada e didática, uma categoria de
+amostragem bastante relevante e que desperta debates conceituais a respeito da sua efetividade, que é a amostragem por cotas. Diante do exposto, apresentaremos uma visão geral 
+desse tipo de amostragem, compreendendo desde o seu surgimento, conceitos fundamentais, exemplos e algumas
+aplicações, até o encerramento deste relatório com nossas considerações finais a respeito desta categoria de amostragem.
 
 \newpage
 
 # 2.Introdução
 
-
+Amostragem por cotas teve sua primeira aparição de relevância em 1932, durante o período eleitoral nos Estados Unidos, onde obteve êxito ao acertar o presidente que seria eleito naquele ano, Franklin D. Roosevelt. De acordo com Deville (1991), amostragem por cotas também é muito utilizada em instituições francesas de pesquisa privada.
+A Amostragem por cotas recebe este nome, pois nele está implícito a forma como os indivíduos ou unidades da população serão selecionados para fazerem parte da amostra que está sendo desenhada. O método de amostragem por cotas consiste em fragmentar a população de análise em grupos para serem selecionados para amostra. Para a criação de cotas ou grupos utiliza-se uma ou mais característica que deve ser conhecida para todas as unidades da população. As cotas serão formadas através da combinação dessas características, para ilustrar, utilizaremos como critério a característica "sexo" e "idade", com isso, um exemplo de cota a ser criada é: "Mulheres acima de 25 anos". O método de amostragem por cotas apresenta semelhanças ao método de amostragem estratificada, entretanto, o que diferencia estes dois métodos é o fato de na amostragem por cotas não realizar uma amostra probabilística, com isso, o resposavél pela plano amostral selecionará qualquer indivíduo ou unidade que preencha os requisitos da cota criada, como o exemplo mencionado anteriormente, mulheres acima de 25 anos. Isso implica que a probabilidade de cada indivíduo  pertencer a amostra não será conhecida. Uma das principais características da amostragem por cotas é que ela é primordialmente aplicada em populações humanas. Além disso, a amostragem por cotas apresenta algumas vantagens quando comparada a amostragem probabilística, as principais ficam por conta do seu baixo custo de realização e a rapidez para implementá-la. O que possibilita seu baixo custo e rapidez é o erro de não resposta, esse erro ocorre quando um indivíduo é selecionado e não responde ao questionário formulado ou não responde a um dos itens do questionário. Como no processo de amostragem por cotas não especifica um indivíduo, mas sim que ele se enquadre nos critérios da cota estabeleciada, pode-se facilmente substituir o indivíduo por outro possibilitando ganho de eficiência na coleta e barateamento de custos.
 
 \newpage
 
